k8s/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    app.kubernetes.io/managed-by: kubectl
